After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 328449 - selecting selectable ellipsized GtkLabel labels is (slightly) broken
selecting selectable ellipsized GtkLabel labels is (slightly) broken
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkLabel
unspecified
Other Linux
: Normal normal
: Small feature
Assigned To: gtk-bugs
gtk-bugs
Depends on: 735719
Blocks:
 
 
Reported: 2006-01-24 17:09 UTC by Behdad Esfahbod
Modified: 2014-09-04 02:26 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Behdad Esfahbod 2006-01-24 17:09:37 UTC
When selecting text in a selectable ellipsized label, the ellipsis can be selected with no snapping, and it linearly maps to the rest of the text.

mclasen: probably better to make it all-or-nothing wrt to the ellipsised part
Comment 1 Behdad Esfahbod 2006-01-24 17:21:05 UTC
For a test case, see bug #328450.
Comment 2 Matthias Clasen 2014-08-30 18:19:26 UTC
To fix this, we need a way to find out if we're in the ellipsized part. See the dependent pango bug.